--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>EezeeStocks</title>
 
 
     <!-- compiled css output -->
@@ -23,7 +23,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="eezeestocksApp">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
