--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,11 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.min.css" rel="stylesheet">
 
-    <!-- custom styles -->
+    <!-- 3rd party styles -->
+    <link href="lib/nvd3/build/nv.d3.min.css" rel="stylesheet">
+    <link href="lib/nv-chart/nv-chart.min.css" rel="stylesheet">
+
+    <!-- application styles -->
     <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
@@ -18,10 +22,17 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
+    <!-- application scripts -->
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+
+    <!-- 3rd party scripts -->
+    <script src="lib/d3/d3.min.js"></script>
+    <script src="lib/nvd3/build/nv.d3.min.js"></script>
+    <script src="lib/nv-chart/nv-chart.min.js"></script>
+    <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>
+
   </head>
 
   <body ng-app="eezeestocksApp">
