--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <link href="css/ionic.app.min.css" rel="stylesheet">
 
     <!-- 3rd party styles -->
-    <link href="lib/nvd3/build/nv.d3.min.css" rel="stylesheet">
+    <link href="lib/nvd3/nv.d3.min.css" rel="stylesheet">
     <link href="lib/nv-chart/nv-chart.min.css" rel="stylesheet">
 
     <!-- application styles -->
@@ -29,7 +29,7 @@
 
     <!-- 3rd party scripts -->
     <script src="lib/d3/d3.min.js"></script>
-    <script src="lib/nvd3/build/nv.d3.min.js"></script>
+    <script src="lib/nvd3/nv.d3.min.js"></script>
     <script src="lib/nv-chart/nv-chart.min.js"></script>
     <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>
 
