--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/filters.js"></script>
 
     <!-- 3rd party scripts -->
     <script src="lib/d3/d3.min.js"></script>
