--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
 
     <!-- 3rd party scripts -->
     <script src="lib/d3/d3.min.js"></script>
-    <script src="lib/nvd3/nv.d3.min.js"></script>
+    <script src="lib/nvd3/nv.d3.js"></script>
     <script src="lib/nv-chart/nv-chart.min.js"></script>
     <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>
 
