--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="lib/nvd3/nv.d3.js"></script>
     <script src="lib/nv-chart/nv-chart.min.js"></script>
     <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>
+    <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
 
   </head>
 
